Updated to Kafka 2, Confluent 5 and kafka-embedded-env 2. Updated tests after upgrade